--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Shopping Cart</title>
     <link rel='stylesheet' href='styles.css' />
+        <link rel='stylesheet' href='app.css' />
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
   </head>
   <body>
     <div id='root'></div>
